[gd_scene load_steps=11 format=3 uid="uid://ctav7tu6nf7yq"]

[ext_resource type="Script" path="res://entities/enemies/slime_ice.gd" id="1_t1v7r"]
[ext_resource type="Texture2D" uid="uid://u602l6q8ywic" path="res://entities/enemies/slime_ice.png" id="2_gaq1w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56yoe"]
size = Vector2(18, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_bi081"]
radius = 80.0

[sub_resource type="Animation" id="Animation_vfn6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cfjv2"]
resource_name = "default"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_xp4mc"]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jirb5"]
_data = {
"RESET": SubResource("Animation_vfn6y"),
"default": SubResource("Animation_cfjv2"),
"die": SubResource("Animation_xp4mc")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obtiu"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyen2"]
bg_color = Color(0.81502, 3.58574e-06, 7.70092e-07, 1)

[node name="IceSlime" type="PathFollow2D"]
script = ExtResource("1_t1v7r")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_56yoe")

[node name="TowerTargeter" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerTargeter"]
shape = SubResource("CircleShape2D_bi081")

[node name="AttackTimer" type="Timer" parent="TowerTargeter"]
unique_name_in_owner = true
wait_time = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gaq1w")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jirb5")
}
autoplay = "default"

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="ZapTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -11.0
offset_right = 9.0
offset_bottom = -9.0
theme_override_styles/background = SubResource("StyleBoxFlat_obtiu")
theme_override_styles/fill = SubResource("StyleBoxFlat_tyen2")
max_value = 3.0
step = 1.0
value = 2.0
show_percentage = false
